k8s/namespaces/base/home-system/zigbee2mqtt/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zigbee2mqtt-code
  namespace: home-system
spec:
  hosts:
    - 'zigbee2mqtt-code.raspbernetes.com'
  gateways:
    - istio-system/istio-system-ingress-gateway
  http:
    - route:
        - destination:
            port:
              number: 12321
            host: zigbee2mqtt-codeserver.home-system.svc.cluster.local
          weight: 100
